modify startup anime

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,8 @@
                         n = 0;
                         p.style.display = "relative";
                         p.style.left = "0";
-                        p.style.width = "690px";
+                        p.style.width = "100%";
+                        p.style.textAlign = "center";
                         setInterval(function() {
                             if (n === 0) {
                                 p.innerHTML = str + "_";
