--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -27,6 +27,10 @@
     <link rel="shortcut icon" href="{{ . }}" />
 {{ end }}
 
+{{ with .Site.Params.cv }}
+    <link rel="shortcut icon" href="{{ . }}" />
+{{ end }}
+
 {{- template "_internal/google_analytics.html" . -}}
 {{- partial "head/custom.html" . -}}
 
